[gd_scene load_steps=7 format=3 uid="uid://bfmdym28li6gq"]

[ext_resource type="Script" uid="uid://b8k7sr13d14t3" path="res://door_area_2.gd" id="1_3bqir"]
[ext_resource type="Texture2D" uid="uid://or7fldw1mrmo" path="res://Assets/Decorations/Buildings/Castle/Area_1_door.png" id="2_1u87a"]
[ext_resource type="Texture2D" uid="uid://dhcgvdj8x0jt8" path="res://Assets/UI/Buttons/Button_Blue_3Slides.png" id="3_vme5e"]
[ext_resource type="FontFile" uid="uid://rxmx4et71ae5" path="res://Assets/font/AlbertTextBold.otf" id="4_xy3ja"]
[ext_resource type="AudioStream" uid="uid://cguixbciqtb6y" path="res://audios/buttonClick.wav" id="5_11ck7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_045sk"]

[node name="Door_Arenas" type="Node2D"]
script = ExtResource("1_3bqir")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-3, 0)
texture = ExtResource("2_1u87a")

[node name="ProximityArea" type="Area2D" parent="."]
position = Vector2(0, 41)
scale = Vector2(1, 0.71999943)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ProximityArea"]
scale = Vector2(4.7200003, 4.7200003)
shape = SubResource("CircleShape2D_045sk")

[node name="button" type="Button" parent="."]
visible = false
offset_left = -35.0
offset_top = -58.0
offset_right = 165.0
offset_bottom = 14.0
scale = Vector2(0.36, 0.36)
size_flags_horizontal = 4
icon = ExtResource("3_vme5e")
flat = true

[node name="Label" type="Label" parent="button"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.262
anchor_bottom = 0.319
offset_left = 61.111088
offset_top = 13.888899
offset_right = 83.71109
offset_bottom = 22.9209
theme_override_fonts/font = ExtResource("4_xy3ja")
theme_override_font_sizes/font_size = 30
text = "Entrar"

[node name="button2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_11ck7")
volume_db = 15.0

[connection signal="body_entered" from="ProximityArea" to="." method="_on_proximity_area_body_entered"]
[connection signal="body_exited" from="ProximityArea" to="." method="_on_proximity_area_body_exited"]
[connection signal="pressed" from="button" to="." method="_on_button_pressed"]
